--- a/stylemobile/mobile.css
+++ b/stylemobile/mobile.css
@@ -27,9 +27,19 @@
         align-items: center;
     }
 
+    .wrapper .cabecalho .btn2-header{
+        display: none;
+    }
+
+    #btn-menu{
+        display: block;
+    }
+
+
     .wrapper .cabecalho .navegation .nav-list {
         gap: 20px;
         display: none;
+        
     }
 
     .wrapper .content {
